--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.23.3",
     "@prisma/client": "^6.11.1",
+    "axios": "^1.10.0",
     "cloudinary": "^2.7.0",
     "dayjs": "^1.11.13",
     "filesize": "^10.1.6",
